--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import numpy as np"
    ]
   },
   {
@@ -77,13 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "py_list = [0,1,2,3,4]\n",
+    "py_range = range(0,5)\n",
+    "array_from_list = np.array(py_list)\n",
+    "array_from_range = np.array(py_range)"
    ]
   },
   {
@@ -108,30 +107,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.651 , 1.7272, 1.8542, 1.905 , 1.9812])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use the conversion rate for turning height in inches to meters\n",
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
-    "#Your code here"
+    "array_height_inches = np.array(list_height_inches)\n",
+    "array_height_meters = np.multiply(array_height_inches, 0.0254)\n",
+    "array_height_meters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 68.03955366,  63.50358342,  99.79134537,  92.98739   ,\n",
+       "       120.20321147])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use the conversion rate for turning weight in pounds to kilograms\n",
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
     "\n",
-    "#your code here"
+    "array_weight_pounds = np.array(list_weight_pounds)\n",
+    "array_weight_kilograms = np.divide(array_weight_pounds, 2.2046)\n",
+    "array_weight_kilograms"
    ]
   },
   {
@@ -151,13 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "bmi_array = np.divide(array_weight_kilograms, np.power(array_height_meters, 2))\n",
+    "bmi_array"
    ]
   },
   {
@@ -169,13 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "identity = np.ones(len(bmi_array))"
    ]
   },
   {
@@ -187,13 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "np.multiply(identity, bmi_array)"
    ]
   },
   {
@@ -212,12 +251,12 @@
    },
    "outputs": [],
    "source": [
-    "#Open a text file (csv files are just plaintext seperated by commas)\n",
+    "# Open a text file (csv files are just plaintext seperated by commas)\n",
     "f = open('bp.txt')\n",
     "n_rows = len(f.readlines())\n",
-    "print('The file has {} lines.'.format(n_rows)) #Print number of lines in the file\n",
-    "f = open('bp.txt') #After using readlines, we must reopen the file\n",
-    "n_cols = (len(f.readline().split('\\t'))) #The file has values seperated by tabs; we read the first line and check it's length.\n",
+    "print('The file has {} lines.'.format(n_rows)) # Print number of lines in the file\n",
+    "f = open('bp.txt') # After using readlines, we must reopen the file\n",
+    "n_cols = (len(f.readline().split('\\t'))) # The file has values seperated by tabs; we read the first line and check it's length.\n",
     "\n",
     "f = open('bp.txt')\n",
     "\n",
@@ -261,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
